syntax = "proto3";

service UserService {
    rpc GetUser (UserId) returns (User);
    rpc GetAllUsers (Empty) returns (UserList);
}

message Empty {};

message User {
    string id = 1;
    string name = 2;
}

message UserId {
    string id = 1;
}

message UserList {
    repeated User users = 1;
}

